Climb/wwwroot/css/site.css
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:700|Montserrat');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}

html, body {
    height: 100%;
}

body {
    min-width: 1500px;
    width: 100%;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
}

p {
    padding: 5px;
    min-width: 300px;
    font-size: 20px;
    text-align: justify;
}

img {
    max-width: 100%;
}

.logo-icon {
    margin: auto 0;
}

.logo {
    padding: 0;
    padding-left: 10px;
    display: inline;
    font-size: 2em;
}

.body-container {
    width: 1500px;
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    margin: 40px auto 0 auto;
}

h2 {
    font-size: 2em;
    color: #FFF;
}

h3 {
    text-align: center;
    padding: 10px;
    font-size: 1.5em;
    color: whitesmoke;
    background-color: orangered;
}

h4 {
    text-align: center;
    padding: 10px;
    font-size: 1.2em;
    color: whitesmoke;
    background-color: orange;
}

.content-footer {
    display: flex;
    justify-content: center;
    align-content: center;
    width: 100%;
    height: 60px;
    line-height: 50px;
    bottom: 0;
    background-color: #333333;
    box-shadow: 0 1px 3px #000;
    color: whitesmoke;
}

.content-footer a {
    color: orangered;
}

.logo {
    height: 100%;
    line-height: 46px;
    font-family: "Josefin Sans", sans-serif;
    font-weight: lighter;
    letter-spacing: 0.06em;
    color: orangered;
}

.deemphasize {
    font-style: italic;
    color: #BBB;
}

.quote {
    margin: 25px;
    color: #FF5500;
    display: block;
}

.quote::before {
    content: "Boyblue:\2003 \201C ";
}

.quote::after {
    content: " \201D";
}

.archive-link {
    font-size: 20px;
    padding: 25px;
    text-decoration: overline;
    align-self: end;
    justify-self: end;
}

.archive-link::after {
    content: "\2192";
}

.event-content {
    grid-area: content;
    display: grid;
    grid-gap: 50px;
    align-content: start;
    margin: 0 50px;
}

.feature-content {
    grid-area: content;
    display: grid;
    grid-gap: 25px;
    align-content: start;
}

.event-pic {
    grid-area: icon;
    margin: 0 20px 0 0;
    border: 5px solid #FF8800;
    position: relative;
    float: left;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    overflow: hidden;
}

.event {
    display: grid;
    grid-template-areas: "icon header header" "icon paragraph paragraph" "empty link1 link2";
    align-content: start;
    /*background-color: aqua;*/
}

.event p {
    grid-area: paragraph;
    padding: 20px;
    background-color: hsl(25, 50%, 90%);
    /*background-color: deepskyblue;*/
}

.event h3 {
    grid-area: header;
    padding: 10px;
    color: hsl(25, 50%, 30%);
    background-color: hsl(25, 50%, 80%);
}

.link {
    padding: 10px;
    font-size: 20px;
    text-decoration: none;
}

.event .link.first {
    grid-area: link1;
    margin: 10px 0 0 0;
    justify-self: center;
    text-align: center;
    /*background-color: dodgerblue;*/
}

.event .link.second {
    grid-area: link2;
    margin: 10px 0 0 0;
    justify-self: center;
    text-align: center;
    /*background-color: dodgerblue;*/
}

.grid-banner {
    grid-area: banner;
    justify-self: center;
}


/* ////////// */
/* Menu Bar */
/* ////////// */
.menu-bar {
    width: 100%;
    height: 40px;
    min-width: 605px;
    display: flex;
    flex-direction: row;
    padding: 0 20px;
    position: fixed;
    top: 0;
    z-index: 10;
    align-items: center;
    box-shadow: 0px 1px 3px #000;
    color: #EEE;
    background-color: #333333;
}

.menu {
    height: 100%;
    padding: 0;
    display: flex;
    margin-left: auto;
    align-items: center;
}

.dropdown {
    height: 100%;
    line-height: 40px;
    padding: 0 25px;
    position: relative;
    display: inline;
    font-weight: bold;
}

.dropdown a {
    text-decoration: none;
    color: #EEE;
}

.dropdown:hover {
    color: #FFF;
    background-color: #666;
}

.dropdown-items {
    width: 100%;
    display: none;
    position: absolute;
    top: 40px;
    right: 0;
    font-weight: normal;
    background-color: #333;
}

.dropdown-items li {
    display: block;
    padding: 20px;
    text-align: center;
    background-color: transparent;
}

.dropdown-items li:hover {
    color: #FFF;
    background-color: #444;
}

.menu div:hover .dropdown-items {
    display: inline-block;
}

.game-name,
.league-name,
.season-name,
.user-username {
    color: orangered;
    text-decoration: none;
}

.fight-button {
    background-color: firebrick;
    border: 1px #333333 solid;
}

.validation-error {
    color: red;
    font-weight: bold;
}

